--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,8 @@ python:
   - "2.7"
 install:
   - pip install pybuilder
+  - pip install coveralls
   - pyb install_dependencies
 script: "pyb -X"
+after_success:
+  - coveralls --verbose
