--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: False
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
-  - "3.4"
+  - 2.6
+  - 2.7
+  - 3.3
+  - 3.4
+  - pypy
 install:
   - pip install pybuilder
   - pip install coveralls
